small change to make fontsize decrease to 1.4*rem at 1280px rather than 1024px bc of screen resolutions at 1280 px (my samsung laptop) having issues w/ the footer being far too large

--- a/src/layout2.css
+++ b/src/layout2.css
@@ -334,7 +334,7 @@
     font-size: calc(1.6 * var(--rem));
   }
 }
-@media (max-width: 1024px) {
+@media (max-width: 1280px) {
   .footer {
     font-size: calc(1.4 * var(--rem));
   }
